# cargo-update-installed

./: Cargo.toml
src/: lib.rs  main.rs
