[package]
name = "cargo-update-installed"
version = "0.1.2"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
license = "MIT OR Apache-2.0"
description = "A small tool to update crates installed through `cargo install`"
repository = "https://github.com/phil-opp/cargo-update-installed"

[dependencies]
tempfile = "3.4.0"
toml = "0.4.8"
